feature: AST for Java