@@ -1,3 +1,5 @@
+import io.github.sgpublic.xxpref.Deps
+
 plugins {
     kotlin("jvm")
 
@@ -19,9 +21,8 @@ java {
 dependencies {
     testImplementation("junit:junit:4.13.2")
 
-    val autoServiceVer = "1.0.1"
-    implementation("com.google.auto.service:auto-service-annotations:$autoServiceVer")
-    kapt("com.google.auto.service:auto-service:$autoServiceVer")
+    implementation("com.google.auto.service:auto-service-annotations:${Deps.AutoService}")
+    kapt("com.google.auto.service:auto-service:${Deps.AutoService}")
 
     implementation("com.squareup:javapoet:1.13.0")
 
@@ -30,34 +31,6 @@ dependencies {
 
 tasks.test {
     useJUnitPlatform()
-}
-
-tasks.withType<JavaCompile> {
-    options.compilerArgs = listOf(
-        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
-    )
-//    options.isFork = true
-//    options.forkOptions.jvmArgs = listOf(
-//        "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-//        "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-//        "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-//        "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-//        "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
-//        "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-//        "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-//        "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
-//        "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
-//        "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
-//    )
 }
 
 tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
